--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="comment-footer">
             <div class="likes">
               <span class="likes-counter">3</span>
-              <button id="likes" class="like-button">addLike()</button>
+              <button class="like-button"></button>
             </div>
           </div>
         </li>
@@ -57,7 +57,7 @@
           rows="4"
         ></textarea>
         <div class="add-form-row">
-          <button id="add-button" class="add-form-button">Написать</button>
+          <button class="add-form-button">Написать</button>
         </div>
       </div>
     </div>
